# fiuld

./: Cargo.toml  deploy_kaggle.sh  prism  prism_agent.py  run_fiuld_mission.ipynb  sample_test.json  submission_test.json  test_fill_simple.json  test_fill_single.json  test_with_train.json  test_with_train_fixed.json
.github/workflows/: cross-compile.yml
kaggle-dataset/: dataset-metadata.json  fiuld
kaggle-kernel/: kernel-metadata.json  run_prism_mission.ipynb
kaggle-kernel-example/: kernel-metadata.json
src/: data.rs  genetic.rs  main.rs  reflection.rs
