[package]
name = "prism"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"
rand = "0.8"
lazy_static = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
rpath = false
strip = true

[profile.release-lto]
inherits = "release"
lto = "fat"

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "target-cpu=native"]
